--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -2990,7 +2990,7 @@
         "id": "WoZh3cUF8sZw"
       },
       "source": [
-        "# ***Между ними нет взаимосвязи***"
+        "Корреляция близкая к нулю указывает на отсутствие линейной связи между двумя переменными. Это не означает, что между ними нет связи вообще, а лишь подчеркивает, что такая связь не является линейной."
       ]
     },
     {
@@ -3008,7 +3008,7 @@
         "id": "JTsCuFwL8sZx"
       },
       "source": [
-        "# ***Чтобы гарантировать, что результаты не будут искажены из-за различий в мужских и женских телах, кадр данных разбит на два: один содержит все мужские записи, а другой - только женские экземпляры.***"
+        "Разделение данных по полу (или другим категориальным признакам) позволяет выявить более точные различия в анализируемых параметрах между группами."
       ]
     },
     {
@@ -3026,20 +3026,7 @@
         "id": "kK904OKt8sZy"
       },
       "source": [
-        "# ***Ответ***\n",
-        "\n",
-        "1.   На общем графике: MRI_Count сильнее всего коррелирует с\n",
-        "Height (рост человека) со значением 0.6\n",
-        "\n",
-        "2.   На графике womenDf:MRI_Count сильнее всего коррелирует с\n",
-        "Weight(вес человека) со значением 0.44\n",
-        "\n",
-        "3.   На графике menDf: MRI_Count сильнее всего коррелирует с PIQ(результативный IQ) со значением 0.41\n",
-        "\n",
-        "**Первая ссылка в гугле выдает что** : Традиционно считается, что размер мозга прямо зависит от размера тела. Для позвоночных это соотношение достаточно стабильно и, очевидно, достаточно для осуществления вегетативных и сенсорных функций. А вот отклонения от «нормы» отражают способности к познанию.\n",
-        "\n",
-        "**Мы можем сделать вывод что это ожидаемый результат**\n",
-        "\n",
+        "Переменные, имеющие более сильную корреляцию с размером мозга (MRI_Count), включают Weight и Height для общей выборки, и в меньшей степени PIQ (Performance IQ) у мужчин. Это можно считать ожидаемым, так как более высокий вес и рост часто ассоциируются с большим объёмом тела и, соответственно, с большим размером мозга.\n",
         "\n",
         "\n",
         "\n",
